# imgui_canvas

./: .gitignore  CMakeLists.txt  README.md  StandardShadingRTT.fragmentshader  StandardShadingRTT.vertexshader
blend2d/tools/: configure-ninja.sh
glfw/: CMakeLists.txt
main/: BLImageGL.cpp  BLImageGL.h  ImGui2dCanvas.cpp  ImGui2dCanvas.h  ImGui3dCanvas.cpp  ImGui3dCanvas.h  LogWindow.cpp  LogWindow.h  MainWindow.cpp  MainWindow.h  TextEditor.cpp  TextEditor.h  imageutils.h  main.cpp  main.h
main/CText/: CTextT.h  CTextT.inl
